[package]
name = "exporter-proxy"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
# if one of the tasks fail, there's no point for the program to keep on running.
panic = "abort"

[profile.dev]
# if one of the tasks fail, there's no point for the program to keep on running.
panic = "abort"

[dependencies]
# async
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = [ "compat" ] }
parking_lot = "0.12.0"
url = {version = "2.2.2", features = ["serde"]}
reqwest = "0.11.10"
# logging
tracing = "0.1"
tracing-subscriber = "0.3.11"
prettytable-rs = "0.10.0"
# for receiving metrics
capnp = "0.15.2"
capnp-futures = "0.15.1"
capnpc = "0.15.2"
# argument parsing
clap = "3.1.18"
# read config file
toml = "0.5.9"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.81"
# errors
anyhow = "1.0.57"
users = "0.11"
nix = "0.26.1"
libc = "0.2.112"
time = "0.3.17"
prometheus = "0.13.3"
coarsetime = "0.1.22"
# exposing metrics
warp = "0.3.2"

[build-dependencies]
capnpc = "0.15.2"